--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@ body {
 
 body {
   padding-top: 3rem;
+  overscroll-behavior: contain;
 }
 
 pre {
